--- a/src/components/carrocelum/Carrocel.module.css
+++ b/src/components/carrocelum/Carrocel.module.css
@@ -1,5 +1,10 @@
 .carrocel {
-  height: 450px;
-  background-color: green;
+  height: auto;
   text-align: center;
+  margin-top: 5px;
+}
+
+.imgbannerum {
+  width: 99.5%;
+  border-radius: 3px;
 }
