--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -1,11 +1,11 @@
-.headerContainer {
+.headercontainer {
   background-color: #ffffff;
   width: 100%;
   border-bottom: 1px solid rgba(0, 0, 0, 0.486);
   box-shadow: 1px 1px 1px 1px #3a000057;
 }
 
-.contactInformation {
+.contactinformation {
   background-color: #000000;
   color: rgb(255, 255, 255);
   display: flex;
@@ -13,7 +13,7 @@
   padding: 10px;
 }
 
-.headerContent {
+.headercontent {
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -24,7 +24,7 @@
   width: 100px;
   border-radius: 50px;
 }
-.searchInput {
+.searchinput {
   text-align: center;
   box-shadow: 1px 1px 1px #27191957;
   width: 450px;
